# vst3_vinylcontroller

./: CMakeLists.txt  LICENSE
resource/: info.rc  vinyl.rc
source/: entry.cpp  version.h  vintage.h  vinylcids.h  vinylconfigconst.h  vinylcontroller.cpp  vinylcontroller.h  vinyleditor.cpp  vinyleditor.h  vinylparamids.h  vinylprocessor.cpp  vinylprocessor.h
source/controls/: cdebugfftview.cpp  cdebugfftview.h  cvinylbuttons.cpp  cvinylbuttons.h  cvinylpopupmenu.cpp  cvinylpopupmenu.h  cwaveview.cpp  cwaveview.h
source/effects/: distortion.h  effect.h  effector.cpp  effector.h  freeze.h  hold.h  lock.h  punch.h  roll.h  vintage.h
source/helpers/: cuepoint.h  fft.cpp  fft.h  filtred.h  padentry.h  parameterreader.h  parameterwriter.h  resourcepath.cpp  resourcepath.h  ringbuffer.h  sampleentry.cpp  sampleentry.h  sampleplayer.cpp  sampleplayer.h  speedprocessor.h
